--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,36 @@
   text-align: center;
 }
 
-.App-header,
-.App-footer {
-  background-color: #282c34;
+.App-header {
+  background-color: #4e4e4e;
   min-height: 20vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
+.App-footer {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  min-height: 20vh;
+  background-color: #4e4e4e;
+}
+
 .footer-text {
   padding-left: 30px;
   padding-right: 30px;
+  font-size: calc(8px + 2vmin);
+}
+
+.logo {
+  width: 300px;
+  height: auto;
 }
 
 /* LIKE BUTTON */
@@ -25,16 +40,18 @@
   display: flex;
   align-items: center;
   justify-content: left;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .like-button {
-  width: 50px;
+  width: 35px;
   height: auto; /* Maintain aspect ratio */
   cursor: 'pointer';
 }
 
 .like-button-text {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 /* BOOKS */
@@ -54,7 +71,7 @@
   border-radius: 40px;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.1);
   margin: 15px;
-  padding: 20px;
+  padding: 30px;
   width: 500px; /* Fixed width */
   height: 600px; /* Fixed height */
   text-align: center;
