--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,17 @@
-.App-header {
-    background-color: #4e4e4e;
-    min-height: 20vh;
-    display: flex;
+.header {
+    min-height: 75vh;
+    background: linear-gradient(rgba(134, 189, 255, 0.921), 
+    rgba(0, 53, 86, 0.911)), url("./../../../public/bookshelf-inaki-del-olmo.jpg") 
+    center/cover no-repeat; 
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
+}
+
+.header-text {
     color: white;
+    opacity: 0.9; 
+    margin-bottom: 2.8rem;
+    max-width: 770px;
+    font-size: 1.5rem;
 }
   
 .logo {
