added AddBookButton and styling

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    min-height: 65vh;
+    min-height: 20vh;
     background: linear-gradient(rgba(134, 189, 255, 0.921), 
     rgba(0, 53, 86, 0.911)), url("./../../../public/bookshelf-inaki-del-olmo.jpg") 
     center/cover no-repeat; 
@@ -19,4 +19,5 @@
 .logo {
     width: 300px;
     height: auto;
+    margin-top: 2.8rem;
 }
