--- a/src/index.css
+++ b/src/index.css
@@ -85,19 +85,21 @@ code {
 
 .button-container {
   background-color: rgb(227, 247, 255);
+  justify-content: right;
+  padding-right: 10px;
 }
 
 .button {
   cursor: pointer;
-  padding: 20px;
+  padding: 15px;
   border: none;
   border-radius: 15px;
   font-size: 0.8rem;
   font-weight: 500;
-  margin-top: 40px;
   color:rgba(0, 60, 97, 0.887);
   background-color: white;
   box-shadow: 0px 8px 16px rgba(21, 60, 105, 0.1);
+  margin-left: 20px;
 }
 
 .button:hover {
