--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,12 +1,13 @@
 .search-form {
-    background-color: white;
     width: 100%;
     max-width: 550px;
-    border-radius: 3.8rem;
+    padding-top: 10px;
 }
 
 .search-form-elem {
-    padding: 0.8rem;
+    padding: 0.8rem 2rem;
+    background-color: white;
+    border-radius: 3.8rem;
 }
 
 .form-control {
@@ -20,6 +21,7 @@
     border: none;
     background: none; 
     cursor: pointer;
+    justify-content: right;
 }
 
 .search-form input[type="text"]:hover::placeholder {
