--- a/src/screens/HomeScreen/HomeScreen.css
+++ b/src/screens/HomeScreen/HomeScreen.css
@@ -3,4 +3,15 @@
     padding-top: 30px;
     padding-left: 30px;
     padding-right: 30px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.blue-bg .flex {
+    flex: 1; /* Allows the SearchForm to take up remaining space */
+    margin-right: auto; /* Pushes SearchForm to the left */
+}
+
+.button-container {
+    margin-top: 20px;
 }
