--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -9,12 +9,12 @@
     text-decoration: none; /* Remove underline */
     padding: 5px;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-.active {
+.active2 {
     background-color: rgba(0, 53, 86, 0.151);
     color: rgba(0, 53, 86, 0.798);
     border-radius: 5px;
