added styling for BookDetailsScreen

--- a/src/screens/AboutScreen/AboutScreen.css
+++ b/src/screens/AboutScreen/AboutScreen.css
@@ -1,6 +1,6 @@
 .about-container h1 {
-    margin-bottom: 20px;
-    margin-top: 30px;
+    padding-bottom: 20px;
+    padding-top: 30px;
 }
 
 .about-container h2 {
@@ -14,5 +14,6 @@
 }
 
 .about-container {
-    margin-bottom: 10vh;
+    padding-bottom: 10vh;
+    background-color: rgb(227, 247, 255);
 }
