--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -13,6 +13,8 @@
     font-size: 1.4rem;
     padding-left: 10px;
     padding-right: 10px;
+    border: none;
+    background-color: transparent;
 }
 
 .active2 {
