--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -2,6 +2,7 @@
     flex-wrap: wrap; /* Allows items to wrap to the next line */
     margin: 15px;
     margin-bottom: 4vh;
+    margin-top: 7vh;
     background-color:rgba(0, 53, 86, 0.151);
     border-radius: 10px;
 }
