--- a/src/screens/AboutScreen/AboutScreen.css
+++ b/src/screens/AboutScreen/AboutScreen.css
@@ -1,12 +1,10 @@
 .about-container h1 {
     padding-bottom: 20px;
-    padding-top: 30px;
+    padding-top: 50px;
 }
 
-.about-container h2 {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    text-align: center;
+.about-container h2, .about-heading {
+    margin: 40px 10vw 40px 10vw;
 }
 
 .about-container p {
