--- a/src/screens/BookDetailsScreen/BookDetailsScreen.css
+++ b/src/screens/BookDetailsScreen/BookDetailsScreen.css
@@ -14,7 +14,7 @@
 }
 
 .book-details-container h2 {
-    margin: 10px 10vw 30px 10vw;
+    margin: 10px 10vw 1.3rem 10vw;
     text-align: left;
 }
 
