--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -16,6 +16,12 @@
     padding-right: 10px;
     border: none;
     background-color: transparent;
+    transition: var(--transition);
+}
+
+.pagination-button:hover {
+    color: rgb(0, 102, 165);
+    transition: var(--transition);
 }
 
 .active2 {
@@ -24,4 +30,5 @@
     border-radius: 5px;
     padding-left: 20px;
     padding-right: 20px;
+    transition: var(--transition);
 }
