--- a/src/screens/AboutScreen/AboutScreen.css
+++ b/src/screens/AboutScreen/AboutScreen.css
@@ -15,3 +15,12 @@
     padding-bottom: 10vh;
     background-color: rgb(227, 247, 255);
 }
+
+.about-heading {
+    transition: var(--transition);
+}
+
+.about-heading:hover {
+    transform: translateY(-10px);
+    transition: var(--transition);
+}
